Fixed some styling issues, stat page styling is not responsive at phone sizes

--- a/front-end/src/styles/CashierOrderPage.css
+++ b/front-end/src/styles/CashierOrderPage.css
@@ -1,29 +1,12 @@
-.OrderContainer {
-  position: relative;
-  padding-bottom: 300px; /* Adjust as needed */
-  display: flex;
-  flex-wrap: wrap;
-  align-content: flex-start;
-}
-
 .FoodItemContainer {
   background-color: white;
   border: 2px solid red;
-  height: 100vh;
-  width: 400px;
   position: relative;
-  right: 0px;
-  top: 0px;
 }
 
 .CategoryNavBar {
   background-color: red;
   border: 100px, solid, red;
-  height: 200px;
-  width: 1090px;
-  position: absolute;
-  left: 0;
-  top: 0;
 }
 
 .cashier-page-item-text {
@@ -72,7 +55,7 @@
   font-size: 1.2rem;
 }
 
-.cashier-page-button {
+.cashier-page-button.btn {
   font-weight: 700;
   color: white;
   padding: 9px 25px;
@@ -109,11 +92,7 @@
 .OrderDetailsContainer {
   background-color: red;
   border: 1px solid white;
-  height: 100vh;
-  width: 480px;
   position: relative;
-  right: 0px;
-  top: 0;
 }
 
 .OrderHeader {
@@ -149,4 +128,8 @@
 
 .cashierItemButton {
   margin-bottom: 10px;
+}
+
+.ItemGrid {
+  position: relative;
 }
